# gitgAmesch

./: .appveyor.yml  .fcgitlab-ci.yml  .gitignore  .gitignore.orig  .gitlab-ci.yml  CHANGELOG  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  ExternalProgramsDialog.cpp  ExternalProgramsDialog.h  GigaMeshGUI.pro  GigaMesh_Logo.icns  LICENSE.txt  QGMDialogAbout.cpp  QGMDialogAbout.h  QGMDialogComboBox.cpp  QGMDialogComboBox.h  QGMDialogConeParam.cpp  QGMDialogConeParam.h  QGMDialogCutOffValues.cpp  QGMDialogCutOffValues.h  QGMDialogEnterText.cpp  QGMDialogEnterText.h  QGMDialogMSII.cpp  QGMDialogMSII.h  QGMDialogNprSettings.cpp  QGMDialogNprSettings.h  QGMDialogPlaneParam.cpp  QGMDialogPlaneParam.h  QGMDialogRuler.cpp  QGMDialogRuler.h  QGMDialogSliderHD.cpp  QGMDialogSliderHD.h  QGMDialogTransparencySettings.cpp  QGMDialogTransparencySettings.h  (+29 more)
cli/spherical_intersection_cli/: CMakeLists.txt  Makefile  cmake_install.cmake
clt/: CMakeLists.txt  gigamesh-borders.cpp  gigamesh-clean.cpp  gigamesh-info.cpp  gigamesh-tolegacy.cpp  make_win.bat  meshgeneratefeaturevectors25d.cpp
clt/voxel/: voxelcuboid_main.c
core/: CMakeLists.txt  Makefile  cmake_install.cmake
core/Mesh/: README_build_local_gcc.txt  edgegeodesic.cpp  edgegeodesic.h  face.h  heightmappixel.h  line.h  marchingfront.cpp  matrix4d.cpp  matrix4d_main.c  mesh.cpp  mesh.h  mesh_params.h  meshseedext.h  octree.h  polyedge.h  polyline.h  rectbox.cpp  showprogress.cpp  triangularprism.cpp  voxelfilter25d.h
core/Mesh/MeshIO/: MeshReader.h  (+10 more)
core/logging/: Logger.cpp  Logging.cpp
core/mesh/: bitflagarray.cpp  compfeaturevecs.cpp  cube.cpp  edgegeodesic.cpp  ellipsedisc.cpp  face.cpp  face_main.c  geodentry.cpp  getuserandhostname.cpp  line.cpp  marchingfront.cpp  matrix4d.cpp  matrix4d_main.c  mesh.cpp  mesh_main.c  mesh_params.cpp  meshinfodata.cpp  meshio.cpp  meshseedext.cpp  octnode.cpp  octree.cpp  plane.cpp  polyedge.cpp  polyline.cpp  primitive.cpp  printbuildinfo.cpp  rectbox.cpp  showprogress.cpp  sphere.cpp  triangularprism.cpp  userinteraction.cpp  vector3d.cpp  vector3d_main.c  vertex.cpp  vertexofface.cpp  voxelfilter25d.cpp  wedgeextraction.cpp
core/normalSphere/: IcoSphereTree.cpp
core/spherical_intersection/: CMakeLists.txt  Makefile  cmake_install.cmake
core/svg/: SvgPath.cpp
core/tests/: CMakeLists.txt  mesh_tests.cpp  testsMain.cpp
gui/: CMakeLists.txt  GigaMeshGUI.pro  GigaMesh_Logo.rc  Makefile  MeshQtCSVImportExport.cpp  MeshQtCSVImportExport.h  QGMDialogComboBox.h  QGMDialogConeParam.h  QGMDialogEnterText.h  QGMDialogMSII.cpp  QGMDialogMSII.h  QGMDialogNprSettings.h  QGMDialogPlaneParam.cpp  QGMDialogPlaneParam.h  QGMDialogRuler.h  QGMMainWindow.cpp  QGMMainWindow.h  cmake_install.cmake  main.cpp  meshQt.h  meshwidget.cpp  meshwidget.h  qgmdockview.h  qruntpsrpmscriptdialog.h
gui/forms/: DialogFindTextures.ui  QGMDialogMatrix.ui  QGMDialogSliderHD.ui  QGMDialogTransparencySettings.ui  dialogAbout.ui  dialogAnnoTemplate.ui  dialogEnterText.ui  dialogGridCenterSelect.ui  dialogMSII.ui  dialogPlaneParam.ui  dialogRuler.ui  dialogWebView.ui  gigamesh.qrc  gigamesh_logo.eps  mainWin.ui  qgmdockinfo.ui  qgmdockview.ui  qruntpsrpmscriptdialog.ui
gui/languages/: GigaMesh_de.qm  translations.qrc
gui/latex_report_template/: iwr_titlepage.sty  latex_templates.qrc  report_single_page.tex  report_single_page_cclicense.tex  report_single_page_cclicense_template.tex  report_single_page_single_view_cclicense.tex  report_single_page_single_view_cclicense_template.tex  report_single_page_single_view_template.tex  report_template.tex  report_visualization_examples.tex  report_visualization_examples_tablets.tex
gui/meshGL/: TexturedMesh.cpp  TexturedMesh.h  TexturedMeshRenderer.cpp  meshGL_params.cpp  meshglcolors.h
gui/normalSphereSelection/: NormalSphereSelectionDialog.h  NormalSphereSelectionRenderWidget.cpp  NormalSphereSelectionRenderWidget.h
gui/python-interface/: #CMakeLists.txt  httpMethod.cpp  httpParser.cpp  httpParser.h  httpVersion.cpp  moc_httpMethod.cpp_parameters  moc_httpParser.cpp_parameters  moc_httpVersion.cpp_parameters  moc_json.cpp_parameters  moc_tcpServer.cpp_parameters  tcpServer.cpp  tcpServer.h  user.h  websiteFail.html  websiteSuccess.html
gui/python-scripts/: PCA_vertices.py  WEScriptSizeSensitive.py  compare_ftvecs.py  pythonscripts.qrc  test_oauth.py  test_pyInterface.py  test_pyinterface.sh  test_wedgeExtraction.ipynb  test_wedgeExtraction.py  warp_vertices.py
gui/shaders/: boundingbox.frag  depth.frag  depth.vert  meshwidget_background_highlight_center.vert  meshwidget_background_polar_lines.frag  vertex_pin.frag  vertex_sprite.geom
gui/src/: CompleterDelegate.cpp  CompleterDelegate.h  CompleterSemWebDelegate.cpp  CompleterSemWebDelegate.h  DialogFindTextures.cpp  DialogFindTextures.h  ExternalProgramsDialog.cpp  ExternalProgramsDialog.h  FileDownloader.cpp  FileDownloader.h  MeshQtCSVImportExport.cpp  MeshQtCSVImportExport.h  QGMAnnotationDialog.cpp  QGMAnnotationDialog.h  QGMAnnotationTemplateDialog.cpp  QGMAnnotationTemplateDialog.h  QGMDialogAbout.cpp  QGMDialogAbout.h  QGMDialogAuthorize.cpp  QGMDialogAuthorize.h  QGMDialogComboBox.cpp  QGMDialogComboBox.h  QGMDialogConeParam.cpp  QGMDialogConeParam.h  QGMDialogCutOffValues.cpp  QGMDialogCutOffValues.h  QGMDialogEnterText.cpp  QGMDialogEnterText.h  QGMDialogMSII.cpp  QGMDialogMSII.h  QGMDialogMatrix.cpp  QGMDialogMatrix.h  QGMDialogNprSettings.cpp  QGMDialogNprSettings.h  QGMDialogPlaneParam.cpp  QGMDialogPlaneParam.h  QGMDialogRuler.cpp  QGMDialogRuler.h  QGMDialogSliderHD.cpp  QGMDialogSliderHD.h  (+32 more)
gui/svg/: SvgCircle.cpp  SvgCircle.h  SvgElement.h
spherical_intersection/: CMakeLists.txt
spherical_intersection/documentation/: main_page.dox  namespace_doc.dox
spherical_intersection/src/: graph_visualization.cpp
spherical_intersection/standalone/: CMakeLists.txt
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  icoSphereTests.cpp  meshIO_tests.cpp  mesh_tests.cpp  testsMain.cpp
(+535 files in other folders)
